--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -87,9 +87,44 @@
 
 {% endmacro %}
 
-{% macro adminPanel(pages) %}
+{% macro pagesTable(pages) %}
 
     {% set editMode = true %}
+    {% import "/common/components/data.html.twig" as data %}
+    {% import _self as admin %}
+
+    <table class="table table-hover">
+        <caption>Страницы сайта</caption>
+        <thead class="hidden-sm hidden-xs">
+        <tr>
+            <th>
+                <div class="row">
+                    <div class="col-md-3">URI</div>
+                    <div class="col-md-9">Заголовок</div>
+                </div>
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for page in pages %}
+            <tr>
+                <td>
+                    <div class="row">
+                        <div class="col-md-3">{{ data.text(page.slug, page.slug, 'slug', editMode) }} <a href="/{{ page.slug }}">ссылка</a></div>
+                        <div class="col-md-8">{{ data.text(page.title, page.slug, 'title', editMode) }}</div>
+                        <div class="col-md-1"><a class="remove-page-button" href="/e/remove-page?slug={{ page.slug }}"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></div>
+                    </div>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    {{ admin.addPageButton() }}
+
+{% endmacro %}
+
+{% macro adminPanel(pages) %}
 
     {% import "/common/components/data.html.twig" as data %}
     {% import _self as admin %}
@@ -98,34 +133,7 @@
         <div class="row">
             <div class="col-sm-12">
 
-                <table class="table table-hover">
-                    <caption>Страницы сайта</caption>
-                    <thead class="hidden-sm hidden-xs">
-                        <tr>
-                            <th>
-                                <div class="row">
-                                    <div class="col-md-3">URI</div>
-                                    <div class="col-md-9">Заголовок</div>
-                                </div>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for page in pages %}
-                        <tr>
-                            <td>
-                                <div class="row">
-                                    <div class="col-md-3">{{ data.text(page.slug, page.slug, 'slug', editMode) }} <a href="/{{ page.slug }}">ссылка</a></div>
-                                    <div class="col-md-8">{{ data.text(page.title, page.slug, 'title', editMode) }}</div>
-                                    <div class="col-md-1"><a href="/e/remove-page?slug={{ page.slug }}"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></div>
-                                </div>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                
-                {{ admin.addPageButton() }}
+                {{ admin.pagesTable(pages) }}
 
             </div>
         </div>
